# workflow-agents-workshop-py

./: README.md  pyproject.toml
shared/agent/src/workshop_agent/: model.py
